--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/Body.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/Body.mxml
@@ -3,31 +3,19 @@
 		  xmlns:fx="http://ns.adobe.com/mxml/2009"
 		  xmlns:mx="library://ns.adobe.com/flex/halo"
 		  xmlns:s="library://ns.adobe.com/flex/spark"
+		  
 		  height="100%" width="100%">
-
-	<fx:Script>
-		<![CDATA[
-			import spark.skins.spark.PanelSkin;
-		]]>
-	</fx:Script>
 
 	<mx:Accordion id="typesAccordion"
 				  height="100%" width="150" />
 
-	<s:Group 
-			 height="100%" width="100%">
-	</s:Group>
+	<s:Group height="100%" width="100%" />
 
-	<s:VGroup 
-			  height="100%" width="200">
+	<s:VGroup height="100%" width="200">
 
 		<components:ObjectsTreePanel id="objectsTreePanel"
-									 width="200" />
+									 height="100%" width="200" />
 
-		<s:Panel 
-				 height="200" width="100%"
-				 
-				 
-				 skinClass="spark.skins.spark.PanelSkin" />
+		<s:Panel height="200" width="100%" />
 	</s:VGroup>
 </s:HGroup>
