--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/SettingsScreen.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/SettingsScreen.mxml
@@ -1,26 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<s:Group xmlns:fx="http://ns.adobe.com/mxml/2009" 
-		 xmlns:s="library://ns.adobe.com/flex/spark" 
+<s:Group xmlns:fx="http://ns.adobe.com/mxml/2009"
 		 xmlns:mx="library://ns.adobe.com/flex/halo"
+		 xmlns:s="library://ns.adobe.com/flex/spark"
 		 
-		 implements="net.vdombox.ide.common.interfaces.ISettingsScreen"
-		 
-		 width="100%" height="100%">
+		 height="100%" width="100%"
+		 implements="net.vdombox.ide.common.interfaces.ISettingsScreen">
 	<fx:Script>
 		<![CDATA[
 			import net.vdombox.ide.common.interfaces.ISettingsScreen;
-			
+
 			import spark.skins.spark.CheckBoxSkin;
-			
+
 			public function performOK() : void
 			{
 				dispatchEvent( new Event( "performOK" ));
 			}
 		]]>
 	</fx:Script>
-	
-	<s:Label text="Settings application managment" fontWeight="bold" fontSize="14" left="20" top="20" fontFamily="Verdana"/>
-	
-	<s:CheckBox id="saveLastApplication" skinClass="spark.skins.spark.CheckBoxSkin"
-		x="20" y="42" label="Save Last Application"/>
+
+	<s:Label text="Settings application managment"
+			 fontFamily="Verdana" fontSize="14" fontWeight="bold" left="20" top="20" />
+
+	<s:CheckBox id="saveLastApplication"
+				label="Save Last Application" x="20" y="42" />
 </s:Group>
