--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/TypeItemRenderer.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/TypeItemRenderer.mxml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<s:ItemRenderer 
-	xmlns:fx="http://ns.adobe.com/mxml/2009"
-	xmlns:s="library://ns.adobe.com/flex/spark"
-	xmlns:mx="library://ns.adobe.com/flex/halo">
+<s:ItemRenderer xmlns:fx="http://ns.adobe.com/mxml/2009"
+				xmlns:mx="library://ns.adobe.com/flex/halo"
+				xmlns:s="library://ns.adobe.com/flex/spark">
 
 	<fx:Script>
 		<![CDATA[
@@ -21,19 +20,14 @@
 		]]>
 	</fx:Script>
 
-	<s:Rect 
-		height="50" width="50"
-		
-		horizontalCenter="0">
+	<s:Rect height="50" width="50"
+			horizontalCenter="0">
 
 		<s:stroke>
-
 			<s:SolidColorStroke color="black" />
 		</s:stroke>
 	</s:Rect>
 
-	<s:RichText 
-		text="{ typeName }" width="100%"
-		
-		horizontalCenter="0" top="55" />
+	<s:RichText text="{ typeName }" width="100%"
+				horizontalCenter="0" top="55" />
 </s:ItemRenderer>
