--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/Wysiwyg.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/Wysiwyg.mxml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<common:VIModule xmlns:common="net.vdombox.ide.common.*"
-				 xmlns:fx="http://ns.adobe.com/mxml/2009"
-				 xmlns:mx="library://ns.adobe.com/flex/halo"
-				 xmlns:s="library://ns.adobe.com/flex/spark">
-
+<common:VIModule 
+	xmlns:fx="http://ns.adobe.com/mxml/2009"
+	xmlns:mx="library://ns.adobe.com/flex/halo"
+	xmlns:s="library://ns.adobe.com/flex/spark"
+	xmlns:common="net.vdombox.ide.common.*">
 	<fx:Script>
 		<![CDATA[
 			import net.vdombox.ide.modules.wysiwyg.ApplicationFacade;
@@ -18,7 +18,7 @@
 
 			override public function tearDown() : void
 			{
-				dispatchEvent( new Event( TEAR_DOWN ));
+				dispatchEvent( new Event( TEAR_DOWN ) );
 			}
 
 			override public function get moduleID() : String
@@ -78,5 +78,4 @@
 			}
 		]]>
 	</fx:Script>
-
 </common:VIModule>
