--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/Body.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/Body.mxml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<s:HGroup xmlns:components="net.vdombox.ide.modules.wysiwyg.view.components.*"
-		  xmlns:fx="http://ns.adobe.com/mxml/2009"
+<s:HGroup xmlns:fx="http://ns.adobe.com/mxml/2009"
 		  xmlns:mx="library://ns.adobe.com/flex/halo"
 		  xmlns:s="library://ns.adobe.com/flex/spark"
 		  
-		  height="100%" width="100%">
+		  height="100%" width="100%"
+		  xmlns:components="net.vdombox.ide.modules.wysiwyg.view.components.*">
 
 	<mx:Accordion id="typesAccordion"
 				  height="100%" width="150" />
@@ -12,6 +12,9 @@
 	<s:Group height="100%" width="100%" />
 
 	<s:VGroup height="100%" width="200">
+
+		<components:ObjectAttributesPanel id="objectAttributesPanel"
+										  height="100%" width="200" />
 
 		<components:ObjectsTreePanel id="objectsTreePanel"
 									 height="100%" width="200" />
