git-svn-id: http://svn.vdombox.ru/flextools/trunk@5752 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Tree/src/net/vdombox/ide/modules/tree/view/components/Toolset.mxml
+++ b/IDE/v.02/modules/Tree/src/net/vdombox/ide/modules/tree/view/components/Toolset.mxml
@@ -4,7 +4,7 @@
 		 xmlns:s="library://ns.adobe.com/flex/spark">
 
 	<fx:Metadata> 
-		[ResourceBundle("General")] 
+		[ResourceBundle("Tree_General")] 
 	</fx:Metadata>
 
 	<s:layout>
@@ -12,5 +12,5 @@
 	</s:layout>
 
 	<s:ToggleButton id="toolsetButton"
-					label="{ resourceManager.getString( 'General', 'toolset_button_label' ) }" />
+					label="{ resourceManager.getString( 'Tree_General', 'toolset_button_label' ) }" />
 </s:Group>
