--- a/IDE/v.02/modules/Tree/src/net/vdombox/ide/modules/tree/view/components/Body.mxml
+++ b/IDE/v.02/modules/Tree/src/net/vdombox/ide/modules/tree/view/components/Body.mxml
@@ -2,7 +2,12 @@
 <s:Group xmlns:fx="http://ns.adobe.com/mxml/2009"
 		 xmlns:mx="library://ns.adobe.com/flex/halo"
 		 xmlns:s="library://ns.adobe.com/flex/spark"
+		 xmlns:components="net.vdombox.ide.modules.tree.view.components.*"
 		 
-		 height="100%" width="100%"
-		 xmlns:components="net.vdombox.ide.modules.tree.view.components.*">
+		 height="100%" width="100%">
+
+	<!--<components:TreeEditor height="5" width="5" />-->
+
+	<mx:Canvas id="main"
+			   height="100%" width="100%" />
 </s:Group>
