git-svn-id: http://svn.vdombox.ru/flextools/trunk@5761 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Tree/src/net/vdombox/ide/modules/tree/view/components/Body.mxml
+++ b/IDE/v.02/modules/Tree/src/net/vdombox/ide/modules/tree/view/components/Body.mxml
@@ -8,6 +8,6 @@
 
 	<!--<components:TreeEditor height="5" width="5" />-->
 
-	<mx:Canvas id="main"
+	<s:Group id="main"
 			   height="100%" width="100%" />
 </s:Group>
