git-svn-id: http://svn.vdombox.ru/flextools/trunk@5796 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Tree/src/net/vdombox/ide/modules/tree/view/components/Body.mxml
+++ b/IDE/v.02/modules/Tree/src/net/vdombox/ide/modules/tree/view/components/Body.mxml
@@ -27,7 +27,7 @@
 		<components:MenuPanel id="menuPanel"
 							  width="100%" />
 
-		<components:Properties id="propertiesPanel"
+		<components:PropertiesPanel id="propertiesPanel"
 							   width="100%" />
 
 		<components:LevelsFilterPanel id="levelsPanel"
