--- a/IDE/v.02/modules/Tree/src/net/vdombox/ide/modules/tree/view/components/StructureLevelItemRenderer.mxml
+++ b/IDE/v.02/modules/Tree/src/net/vdombox/ide/modules/tree/view/components/StructureLevelItemRenderer.mxml
@@ -11,7 +11,23 @@
 		]]>
 	</fx:Script>
 
-	<s:HGroup width="100%" height="100%" verticalAlign="middle">
+	<s:states>
+		<s:State name="normal" />
+		<s:State name="hovered" />
+		<s:State name="selected" />
+	</s:states>
+	
+	<s:Rect bottom="0" left="0" right="0" top="0">
+
+		<s:fill>
+
+			<s:SolidColor color="0x999999"
+						  alpha="0" alpha.hovered="0.2" alpha.selected="0.6" />
+		</s:fill>
+	</s:Rect>
+
+	<s:HGroup height="100%" width="100%"
+			  paddingLeft="3" paddingRight="3" verticalAlign="middle">
 
 		<s:CheckBox id="cbx"
 					height="100%" selected="@{ data.visible }"
