--- a/IDE/v.02/modules/Tree/src/net/vdombox/ide/modules/tree/view/components/Arrow.mxml
+++ b/IDE/v.02/modules/Tree/src/net/vdombox/ide/modules/tree/view/components/Arrow.mxml
@@ -1,8 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<s:Group xmlns:fx="http://ns.adobe.com/mxml/2009" 
-		 xmlns:s="library://ns.adobe.com/flex/spark" 
+<s:Group xmlns:fx="http://ns.adobe.com/mxml/2009"
+		 xmlns:s="library://ns.adobe.com/flex/spark"
 		 xmlns:mx="library://ns.adobe.com/flex/halo">
-	<fx:Declarations>
-		<!-- Place non-visual elements (e.g., services, value objects) here -->
-	</fx:Declarations>
+
+	<s:Rect height="100%" width="100%">
+
+		<s:stroke>
+
+			<s:SolidColorStroke color="green"
+								weight="2" />
+		</s:stroke>
+	</s:Rect>
 </s:Group>
