--- a/IDE/v.02/core/src/net/vdombox/ide/core/view/skins/MainWindowSkin.mxml
+++ b/IDE/v.02/core/src/net/vdombox/ide/core/view/skins/MainWindowSkin.mxml
@@ -70,7 +70,7 @@
 	<s:Group id="topMask" left="1" right="1" top="1" bottom="1" >
 		<s:Rect width="100%" height="100%" radiusX="7" radiusY="7">
 			<s:fill>
-				<s:SolidColor color="0xCC0000" alpha="1" />
+				<s:SolidColor color="0x000000" alpha="1" />
 			</s:fill>
 		</s:Rect>
 	</s:Group>
@@ -99,7 +99,7 @@
 		
 		<s:Rect top="75" bottom="15" width="100%" height="100%" minHeight="0" minWidth="0">
 			<s:fill>
-				<s:SolidColor color="0xCC0000" />
+				<s:SolidColor color="0x999999" />
 			</s:fill>
 		</s:Rect>
 		
