git-svn-id: http://svn.vdombox.ru/flextools/trunk@5803 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Tree/src/net/vdombox/ide/modules/tree/view/components/StructureLevelItemRenderer.mxml
+++ b/IDE/v.02/modules/Tree/src/net/vdombox/ide/modules/tree/view/components/StructureLevelItemRenderer.mxml
@@ -7,7 +7,7 @@
 
 	<fx:Script>
 		<![CDATA[
-			import net.vdombox.ide.modules.tree.view.skins.NewCheckBoxSkin;
+			import net.vdombox.ide.modules.tree.view.skins.LevelCheckBoxSkin;
 		]]>
 	</fx:Script>
 
@@ -31,7 +31,7 @@
 
 		<s:CheckBox id="cbx"
 					height="100%" selected="@{ data.visible }"
-					skinClass="net.vdombox.ide.modules.tree.view.skins.NewCheckBoxSkin"
+					skinClass="net.vdombox.ide.modules.tree.view.skins.LevelCheckBoxSkin"
 					symbolColor="{data.color}" />
 
 		<s:Rect width="1"
