--- a/IDE/v.02/modules/Tree/src/net/vdombox/ide/modules/tree/view/components/Body.mxml
+++ b/IDE/v.02/modules/Tree/src/net/vdombox/ide/modules/tree/view/components/Body.mxml
@@ -5,7 +5,6 @@
 		 xmlns:components="net.vdombox.ide.modules.tree.view.components.*"
 		 
 		 height="100%" width="100%">
-	<!--<components:TreeEditor height="5" width="5" />-->
 
 	<s:layout>
 
@@ -24,13 +23,10 @@
 			<s:VerticalLayout />
 		</s:layout>
 
-		<components:MenuPanel id="menuPanel"
-							  width="100%" />
+		<components:MenuPanel id="menuPanel" width="100%" />
 
-		<components:PropertiesPanel id="propertiesPanel"
-									width="100%" />
+		<components:PropertiesPanel id="propertiesPanel" width="100%" />
 
-		<components:LevelsFilterPanel id="levelsPanel"
-									  width="100%" />
+		<components:LevelsFilterPanel id="levelsPanel" width="100%" />
 	</s:Group>
 </s:Group>
