--- a/IDE/v.02/modules/Tree/src/net/vdombox/ide/modules/tree/view/components/CreatePageWindow.mxml
+++ b/IDE/v.02/modules/Tree/src/net/vdombox/ide/modules/tree/view/components/CreatePageWindow.mxml
@@ -8,22 +8,38 @@
 
 	<fx:Script>
 		<![CDATA[
+			import mx.collections.ArrayList;
+			
+			import net.vdombox.ide.common.vo.TypeVO;
 			import net.vdombox.ide.modules.tree.events.CreatePageWindowEvent;
+
+			[Bindable]
+			private var _pagesDataProvider : ArrayList;
+
+			public function set pagesDataProvider( value : Array ) : void
+			{
+				_pagesDataProvider = new ArrayList( value );
+			}
+
+			public function get selectedPageType() : TypeVO
+			{
+				return pageTypeList.selectedItem as TypeVO;
+			}
 		]]>
 	</fx:Script>
 
 	<s:Label text="Select page type" />
 
-	<s:List height="100%" width="100%" />
+	<s:List id="pageTypeList" dataProvider="{ _pagesDataProvider }" height="100%" width="100%" requireSelection="true"
+			itemRenderer="net.vdombox.ide.modules.tree.view.components.PageTypeItemRenderer"
+			useVirtualLayout="false" />
 
 	<s:HGroup width="100%">
 
 		<mx:Spacer width="100%" />
 
-		<s:Button label="Create"
-				  click="dispatchEvent( new CreatePageWindowEvent( CreatePageWindowEvent.PERFORM_CREATE ) )" />
+		<s:Button label="Create" click="dispatchEvent( new CreatePageWindowEvent( CreatePageWindowEvent.PERFORM_CREATE ) )" />
 
-		<s:Button label="Cancel"
-				  click="dispatchEvent( new CreatePageWindowEvent( CreatePageWindowEvent.PERFORM_CANCEL ) )" />
+		<s:Button label="Cancel" click="dispatchEvent( new CreatePageWindowEvent( CreatePageWindowEvent.PERFORM_CANCEL ) )" />
 	</s:HGroup>
 </s:VGroup>
