--- a/IDE/v.02/modules/Tree/src/net/vdombox/ide/modules/tree/view/skins/TreeElementSkin.mxml
+++ b/IDE/v.02/modules/Tree/src/net/vdombox/ide/modules/tree/view/skins/TreeElementSkin.mxml
@@ -115,7 +115,7 @@
 
 		<s:HGroup height="100%" width="100%"
 				  top="30"
-				  visible.minimized="false">
+				  excludeFrom="minimizedGroup">
 
 			<mx:Image height="80" source="{ hostComponent.pageResource.data }" width="80" />
 
