git-svn-id: http://svn.vdombox.ru/flextools/trunk@5813 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Tree/src/net/vdombox/ide/modules/tree/view/components/Body.mxml
+++ b/IDE/v.02/modules/Tree/src/net/vdombox/ide/modules/tree/view/components/Body.mxml
@@ -13,7 +13,12 @@
 
 	<s:Scroller height="100%" width="100%">
 
-		<s:Group id="main" />
+		<s:Group>
+
+			<s:Group id="linkagesContainer" />
+
+			<s:Group id="treeElementsContainer" />
+		</s:Group>
 	</s:Scroller>
 
 	<s:Group height="100%">
