--- a/IDE/v.02/modules/Tree/src/net/vdombox/ide/modules/tree/view/skins/TreeElementSkin.mxml
+++ b/IDE/v.02/modules/Tree/src/net/vdombox/ide/modules/tree/view/skins/TreeElementSkin.mxml
@@ -109,7 +109,7 @@
 
 				<mx:Image height="25" source="{ hostComponent.typeResource.data }" width="25" />
 
-				<s:Label text="{ hostComponent.title }" color.normal="#FFFFFF" />
+				<s:Label text="{ hostComponent.title }" color="#FFFFFF" />
 			</s:HGroup>
 		</s:Group>
 
