git-svn-id: http://svn.vdombox.ru/flextools/trunk@5815 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Tree/src/net/vdombox/ide/modules/tree/view/components/Body.mxml
+++ b/IDE/v.02/modules/Tree/src/net/vdombox/ide/modules/tree/view/components/Body.mxml
@@ -15,9 +15,11 @@
 
 		<s:Group>
 
-			<s:Group id="linkagesContainer" />
+			<s:Group id="linkagesContainer"
+					 x="10" y="20" />
 
-			<s:Group id="treeElementsContainer" />
+			<s:Group id="treeElementsContainer"
+					 x="10" y="20" />
 		</s:Group>
 	</s:Scroller>
 
@@ -28,10 +30,13 @@
 			<s:VerticalLayout />
 		</s:layout>
 
-		<components:MenuPanel id="menuPanel" width="100%" />
+		<components:MenuPanel id="menuPanel"
+							  width="100%" />
 
-		<components:PropertiesPanel id="propertiesPanel" width="100%" />
+		<components:PropertiesPanel id="propertiesPanel"
+									width="100%" />
 
-		<components:LevelsFilterPanel id="levelsPanel" width="100%" />
+		<components:LevelsFilterPanel id="levelsPanel"
+									  width="100%" />
 	</s:Group>
 </s:Group>
